--- a/iceAlpineSki.html
+++ b/iceAlpineSki.html
@@ -124,8 +124,11 @@
       </div>
 
       <div class="col mb-4">
-        <div class="card h-100">
-          <img src="imgs/screwPouch.jpeg" class="card-img-top" alt="...">
+        <div class="card h-100" style="opacity:.2">
+          <img src="imgs/screwPouch.jpeg" class="card-img-top">
+      <div class="card-img-overlay">
+              <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
           <div class="card-body">
             <h5 class="card-title">Black Diamond: Ice Screwup Pouch </h5>
             <p class="card-text"><span>Info:</span> Ice screw carrying case. <br> <span>Condition:</span> New. </p>
